[package]
name = "ydb-steroids"
version = "0.1.0"
edition = "2021"
authors = ["Kviring A.V. <alex@kviring.com>"]
license = "Apache 2.0"
description = "Added extra functional to ydb rust client.Such as migrations, macro for query, testcontainer support."

[dependencies]
ydb = "0.2.0"
ydb-grpc = "0.0.7"
testcontainers = "0.13.0"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
lazy_static = { version = "1.4.0", optional = true }
sha2 = "0.10.2"
include_dir = "0.7.2"
uuid = { version = "1.0.0", features = ["v4", "serde"], optional = true }
tracing = { version = "0.1.31" }

[features]
test_container = ["lazy_static"]

[dev-dependencies]
log = "0.4"
simple_logger = "2.1.0"
tracing = { version = "0.1.31" }
tracing-log = { version = "0.1.2" }
ydb-steroids = { path = ".", features = ["test_container", "uuid"] }

